--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./blocks/vendor/normalize.css">
   <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
@@ -17,7 +16,7 @@
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#">
-          Узнать⟶
+          Узнать&#129042;
         </a>
       </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка, фрагмент">
@@ -25,73 +24,73 @@
     </header>
     <main class="content">
       <section class="description">
-        <div class="two-columns">
-          <h2 class="reset-style two-columns__brief">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">
             Главные проблемы в обучении
           </h2>
           <div class="two-columns__main-text">
-            <p class="reset-style two-columns__paragraph">
+            <p class="two-columns__paragraph">
               Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
             </p>
-            <p class="reset-style two-columns__paragraph">
+            <p class="two-columns__paragraph">
               <span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
             </p>
-            <p class="reset-style two-columns__paragraph">
+            <p class="two-columns__paragraph">
               Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
             </p>
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="techniques">
         <h2 class="section-title">
           Техники обучения
         </h2>
-        <h3 class="section-subtitle">
+        <p class="section-subtitle">
           Пять практик от Барбары Оакли
-        </h3>
+        </p>
         <ul class="cards">
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-attention.png" alt="Книга">
-            <h4 class="cards__title">
+            <h3 class="cards__title">
               Два вида внимания
-            </h4>
+            </h3>
             <p class="cards__description">
               Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.
             </p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-recall.png" alt="Статуя">
-            <h4 class="cards__title">
+            <h3 class="cards__title">
               Recall
-            </h4>
+            </h3>
             <p class="cards__description">
               Вспоминайте изученное — это позволит соединить разрозненные порции памяти.
             </p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-interliving.png" alt="Мемориал">
-            <h4 class="cards__title">
+            <h3 class="cards__title">
               Интерливинг
-            </h4>
+            </h3>
             <p class="cards__description">
               Изучайте несколько навыков одновременно, они обогащают друг друга.
             </p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-question.png" alt="Белая комната">
-            <h4 class="cards__title">
+            <h3 class="cards__title">
               Вопросы
-            </h4>
+            </h3>
             <p class="cards__description">
               Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.
             </p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-competence.png" alt="Стопка книг">
-            <h4 class="cards__title">
+            <h3 class="cards__title">
               Иллюзия компетентности
-            </h4>
+            </h3>
             <p class="cards__description">
               Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.
             </p>
@@ -103,9 +102,9 @@
         <h2 class="section-title">
           Видео нa TED
         </h2>
-        <h3 class="section-subtitle">
+        <p class="section-subtitle">
           Для тех, кто любит прокрастинировать
-        </h3>
+        </p>
         <div class="video__iframes">
           <iframe class="video__iframe" id="ytplayer" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen>
           </iframe>
@@ -115,7 +114,7 @@
       </section>
 
       <section class="oakley">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">
             История Барбары Оакли.
           </h2>
@@ -124,7 +123,7 @@
               С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
             </p>
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="feynman">
@@ -146,17 +145,17 @@
         <p class="section-subtitle">
           Про учёбу и мозг
         </p>
-        <div class="table">
-          <div class="table__cell table__cell_theme_light">
+        <ul class="table">
+          <li class="table__cell table__cell_theme_light">
             <h3 class="table__heading">
               86 миллиардов
             </h3>
             <p class="table__text">
               Число нейронов в мозге человека
             </p>
-          </div>
+          </li>
 
-          <div class="table__cell table__cell_theme_light">
+          <li class="table__cell table__cell_theme_light">
             <h3 class="table__heading">
               2.1 миллиарда
             </h3>
@@ -166,27 +165,27 @@
             <p class="table__text">
               Всемирный Банк, 2017
             </p>
-          </div>
+          </li>
 
-          <div class="table__cell table__cell_theme_light">
+          <li class="table__cell table__cell_theme_light">
             <h3 class="table__heading">
               1000 терабайт
             </h3>
             <p class="table__text">
               Объём памяти человека
             </p>
-          </div>
+          </li>
 
-          <div class="table__cell table__cell_theme_light">
+          <li class="table__cell table__cell_theme_light">
             <h3 class="table__heading">
               500 триллионов
             </h3>
             <p class="table__text">
               Число ответственных за обучение нервных синапсов у взрослого человека
             </p>
-          </div>
+          </li>
 
-          <div class="table__cell table__cell_theme_light">
+          <li class="table__cell table__cell_theme_light">
             <h3 class="table__heading">
               420 миллионов
             </h3>
@@ -196,35 +195,35 @@
             <p class="table__text">
               Всемирный Банк, 2017
             </p>
-          </div>
+          </li>
 
-          <div class="table__cell table__cell_theme_light">
+          <li class="table__cell table__cell_theme_light">
             <h3 class="table__heading">
               17–20 лет
             </h3>
             <p class="table__text">
               Пик обучаемости
             </p>
-          </div>
+          </li>
 
-          <div class="table__cell table__cell_theme_light">
+          <li class="table__cell table__cell_theme_light">
             <h3 class="table__heading">
               1885 год
             </h3>
             <p class="table__text">
               Открытие кривой забывания
             </p>
-          </div>
+          </li>
 
-          <div class="table__cell table__cell_theme_light">
+          <li class="table__cell table__cell_theme_light">
             <h3 class="table__heading">
               1889 год
             </h3>
             <p class="table__text">
               Открытие условного рефлекса
             </p>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
 
       <section class="khan">
@@ -235,7 +234,7 @@
           <h2 class="khan__title">
             Весь мир — школа
           </h2>
-          <p class="khan__quote">
+          <blockquote class="khan__quote">
             Страсть и новаторство Сала Хана меняют
              процесс обучения миллионов студентов
               по всему миру. 
@@ -245,7 +244,7 @@
                смогут получить навыки и знания, 
                которые приносят успех в школе, 
                карьере и жизни.
-          </p>
+          </blockquote>
           <p class="khan__quote-author">
             Джордж Лукас
           </p>
@@ -268,97 +267,97 @@
         <p class="section-subtitle section-subtitle_theme_dark">
           от Джоша Кауфмана
         </p>
-        <div class="table">
-          <div class="table__cell table__cell_theme_dark">
+        <ul class="table">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">
               1
             </h3>
             <p class="table__text">
               Выберите привлекательный проект.
             </p>
-          </div>
+          </li>
 
-          <div class="table__cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">
               2
             </h3>
             <p class="table__text">
               Сосредоточьтесь на каком-то одном навыке.
             </p>
-          </div>
+          </li>
 
-          <div class="table__cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">
               3
             </h3>
             <p class="table__text">
               Определите целевой уровень мастерства.
             </p>
-          </div>
+          </li>
 
-          <div class="table__cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">
               4
             </h3>
             <p class="table__text ">
               Разбейте навык на элементы.
             </p>
-          </div>
+          </li>
 
-          <div class="table__cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">
               5
             </h3>
             <p class="table__text ">
               Приготовьте всё необходимое для занятий.
             </p>
-          </div>
+          </li>
 
-          <div class="table__cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">
               6
             </h3>
             <p class="table__text ">
               Устраните препятствия для занятий.
             </p>
-          </div>
+          </li>
 
-          <div class="table__cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">
               7
             </h3>
             <p class="table__text">
               Выделите специальное время для занятий.
             </p>
-          </div>
+          </li>
 
-          <div class="table__cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">
               8
             </h3>
             <p class="table__text">
               Создайте быстрые петли обратной связи.
             </p>
-          </div>
+          </li>
 
-          <div class="table__cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">
               9
             </h3>
             <p class="table__text">
               Занимайтесь по расписанию, короткими интенсивными интервалами.
             </p>
-          </div>
+          </li>
 
-          <div class="table__cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">
               10
             </h3>
             <p class="table__text">
               Уделяйте внимание количеству и скорости.
             </p>
-          </div>
-        </div>
+          </li>
+        </ul>
         <div class="kaufman__triangle rotation"></div>
       </section>
 
@@ -366,9 +365,9 @@
         <h2 class="section-title">
           Полезные ресурсы
         </h2>
-        <h3 class="section-subtitle">
+        <p class="section-subtitle">
           Больше материалов о техниках и лайфхаках обучения
-        </h3>
+        </p>
         <ul class="resources__logo-zone">
           <li class="resources__logo">
             <a href="#">
